lots of little fixes, made projects page lok good on mobile

--- a/src/app/screens/projects-page/my-websites/my-websites.component.scss
+++ b/src/app/screens/projects-page/my-websites/my-websites.component.scss
@@ -1,3 +1,5 @@
+@import "../../../../styles.scss";
 .site-container {
   max-width: 500px;
+  padding: 10px;
 }
